sbdmock (0.4.0) unstable; urgency=low

  * Public release
  * Example configuration files for Maemo 4.0/Chinook

 -- Alexandr D. Kanevskiy <packages@bifh.org>  Sun, 11 Nov 2007 23:55:12 +0300

sbdmock (0.3.99.11) unstable; urgency=low

  * sbdarchtarget: build Architecture: all packages only once

 -- Alexandr D. Kanevskiy <packages@bifh.org>  Tue,  2 Oct 2007 20:56:35 +0300

sbdmock (0.3.99.10) unstable; urgency=low

  * Possibility to pass additional options to apt-get

 -- Alexandr D. Kanevskiy <packages@bifh.org>  Mon, 13 Aug 2007 22:31:10 +0300

sbdmock (0.3.99.9) unstable; urgency=low

  * by default, export DEBIAN_FRONTEND=noninteractive and DEBIAN_PRIORITY=critical

 -- Alexandr D. Kanevskiy <packages@bifh.org>  Tue, 17 Jul 2007 21:38:29 +0300

sbdmock (0.3.99.8) unstable; urgency=low

  * use pycentral for debian packaging

 -- Alexandr D. Kanevskiy <packages@bifh.org>  Mon, 25 Jun 2007 21:43:09 +0300

sbdmock (0.3.99.7) unstable; urgency=low

  * Added possibility to change DEB_BUILD_OPTIONS (--dbo)

 -- Alexandr D. Kanevskiy <packages@bifh.org>  Mon, 30 Apr 2007 13:51:26 +0300

sbdmock (0.3.99.6) unstable; urgency=low

  * killall -15 before selecting target.

 -- Alexandr D. Kanevskiy <packages@bifh.org>  Wed, 31 Jan 2007 17:44:44 +0200

sbdmock (0.3.99.5) unstable; urgency=low

  * Kill all unneeded processes before selecting another target

 -- Alexandr D. Kanevskiy <packages@bifh.org>  Wed, 31 Jan 2007 11:41:17 +0200

sbdmock (0.3.99.4) unstable; urgency=low

  * Target creation/removal is now available only when unique extention
    specified (--uniqueext) or generated (-u)

 -- Alexandr D. Kanevskiy <packages@bifh.org>  Mon, 29 Jan 2007 21:41:13 +0200

sbdmock (0.3.99.3) unstable; urgency=low

  * /etc/resolv.conf copied from host system by default
  * -b|-B|-S parameters passed to dpkg-buildpackage
  * /host_usr/bin/* hacks are now unique for each target

 -- Alexandr D. Kanevskiy <packages@bifh.org>  Mon, 29 Jan 2007 19:29:44 +0200
